# maestro

./: .gitignore  .mcp.json  AGENTS.MD  AGENTS.md  ARCHITECTURE.md  CHANGELOG-legacy.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  FEATURES_ANALYSIS.md  IMPLEMENTATION_REPORT.md  IMPORTS_ANALYSIS.md  INFRA_ANALYSIS.md  LICENSE  MAINTENANCE.md  MIGRATE.md  PHASE1_EXECUTION_REPORT.md  PHASE2_EXECUTION_REPORT.md  PLAN-v0.8.md  PROPOSED_CODE_FILE_REORGANIZATION_PLAN.md  README.md  REFERENCE.md  ROADMAP.md  SECURITY.md  SETUP_GUIDE.md  SHARED_TUI_ANALYSIS.md  TESTING.md  THIRD_PARTY_NOTICES.md  TUTORIAL.md  UPGRADING.md  VERSION  VERSION_COMMIT  build.rs  build.ts  cliff.toml  mcp.json  mcp_template.json  package.json  (+1 more)
.beads/: .gitignore  AGENTS.md  config.yaml  issues.jsonl  last-touched  sync-state.json
.claude/: AGENTS.md  CLAUDE.md  settings.json  settings.local.json  toolboxes
.claude-plugin/: .lsp.json  marketplace.json  plugin.json
.codex/: AGENTS.md  config.toml.example
.factory/: AGENTS.md  init.sh  services.yaml
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.maestro/: .gitignore  AGENTS.md  MAESTRO.md  RECOVERY.md  config.yaml  principles.jsonl  settings.json  store.sqlite  tracks.md
commands/: ci.md  cn.md  compact.md  conductor-design.md  conductor-finish.md  conductor-implement.md  conductor-migrate-beads.md  conductor-newtrack.md  conductor-revert.md  conductor-setup.md  ct.md  decompose-task.md  doc-sync.md  ds.md  fb.md  file_beads.md  ground.md  memory-search.sh  openspec_brainstorm.md  rb.md  review_beads.md
conductor/: AGENTS.md  product.md  tech-stack.md  tracks.md  workflow.md
demo/: README.md  api.test.ts  api.ts  config.json
docs/: AGENT-SKILLS.md  AGENT-TEAMS.md  AGENTS.md  ARCHITECTURE.md  CUSTOMIZATION.md  DESIGN.md  GLOBAL_CONFIG.md  GLOBAL_CONFIG_TEMPLATE.md  MIGRATION_V2.md  PIPELINE_ARCHITECTURE.md  SKILL-INTEROP.md  TROUBLESHOOTING.md  ai-reviewer-protocol.md  architecture-lints.md  architecture.yaml  auto-merge-eligibility.md  ci-integration.md  cli-reference.md  cross-task-conflict.md  deploy-gate.md  dev-observability.md  edge-cases.md  mcp-server.md  (+28 more)
(+4432 files in other folders)
