[package]
name = "maestro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11.0"
similar = "2"
thiserror = "2"
