[package]
name = "maestro"
# Frozen placeholder. The real version is git-derived at build time
# (0.0.<commit-epoch>-g<sha>) by build.rs and injected as MAESTRO_VERSION.
version = "0.107.0"
edition = "2024"

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
similar = "2"
thiserror = "2"

# Codify the zero-warning gate (`cargo clippy --all-targets -- -D warnings`) so a
# plain `cargo build`/`cargo clippy` enforces it without the flag.
[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
